--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://js.instamojo.com/v1/checkout.js"></script>
+
     <meta charset="UTF-8" />
     <script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script>
 
